// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`SubmitButtons Tests should match the snapshot 1`] = `
<div
  className="row"
>
  <div
    className="text-right col-12 col-md-9 py-3 pr-1"
  >
    <button
      className="btn btn-lg mb-2 mb-sm-0"
      id="cancelButton"
      onClick={[Function]}
      type="button"
    >
      cancel.en
    </button>
     
    <button
      className="btn btn-lg mb-2 mb-sm-0"
      id="saveButton"
      onClick={[Function]}
      type="button"
    >
      save.en
    </button>
  </div>
</div>
`;

exports[`SubmitButtons Tests should match the snapshot with invisible cancel 1`] = `
<div
  className="row"
>
  <div
    className="text-right col-12 col-md-9 py-3 pr-1"
  >
     
    <button
      className="btn btn-lg mb-2 mb-sm-0"
      id="saveButton"
      onClick={[Function]}
      type="button"
    >
      save.en
    </button>
  </div>
</div>
`;
